--- a/index.html
+++ b/index.html
@@ -38,29 +38,37 @@
         <div class="container">
             <div class="row">
                 <ul class="ul_menu">
-                    <li><a class="menu_item" href="#">Главная</a></li>
-                    <li><a class="menu_item" href="#">Геленджик</a></li>
-                        <ul class="submenu">
-                            <li><a class="sub_menu_item" href="#">Моя душа - Геленджик</a></li>
-                            <li><a class="sub_menu_item" href="#">Достопримечательности</a></li>
-                            <li><a class="sub_menu_item" href="#">Тайны и загадки</a></li>
-                            <li><a class="sub_menu_item" href="#">Жилье в Геленджике</a></li>
-                            <li><a class="sub_menu_item" href="#">Отдых на море</a></li>
-                            <li><a class="sub_menu_item" href="#">Развлечения</a></li>
-                            <li><a class="sub_menu_item" href="#">Экскурсии</a></li>
-                            <li><a class="sub_menu_item" href="#">На ПМЖ в Геленджике</a></li>
-                            <li><a class="sub_menu_item" href="#">Пляжи Геленджика</a></li>
-                            <li><a class="sub_menu_item" href="#">Большой Геленджик</a></li>
-                            <li><a class="sub_menu_item" href="#">Новости Кубани</a></li>
-                            <li><a class="sub_menu_item" href="#">Грибы на Кубани</a></li>
-                            <li><a class="sub_menu_item" href="#">Фотогалерея "Влюбленные в Геленджик"</a></li>
-                        </ul>
-                    <li><a class="menu_item" href="#">Самопознание</a></li>
-                    <li><a class="menu_item" href="#">О здоровье</a></li>
-                    <li><a class="menu_item" href="#">О семье</a></li>
-                    <li><a class="menu_item" href="#">Моя кулинария</a></li>
-                    <li><a class="menu_item" href="#">Обо мне</a></li>
-                    <li><a class="menu_item" href="#">Контакты</a></li>
+                    <li class="li_menu"><a class="menu_item" href="#">Главная</a></li>
+                    <li class="li_menu"><a class="menu_item" href="#">Геленджик</a></li>
+                    <div class="submenu">
+                        <div class="container">
+                            <div class="row row_submenu">
+                                <ul class="ul_submenu">
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Моя душа - Геленджик</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Достопримечательности</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Тайны и загадки</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Жилье в Геленджике</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Отдых на море</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Развлечения</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Экскурсии</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">На ПМЖ в Геленджике</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Пляжи Геленджика</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Большой Геленджик</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Новости Кубани</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Грибы на Кубани</a></li>
+                                    <li class="li_submenu"><a class="sub_menu_item" href="#">Фотогалерея "Влюбленные в Геленджик"</a></li>
+                                </ul>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <li class="li_menu"><a class="menu_item" href="#">Самопознание</a></li>
+                    <li class="li_menu"><a class="menu_item" href="#">О здоровье</a></li>
+                    <li class="li_menu"><a class="menu_item" href="#">О семье</a></li>
+                    <li class="li_menu"><a class="menu_item" href="#">Моя кулинария</a></li>
+                    <li class="li_menu"><a class="menu_item" href="#">Обо мне</a></li>
+                    <li class="li_menu"><a class="menu_item" href="#">Контакты</a></li>
                 </ul>
             </div>
         </div>
