--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <div class="row">
                 <ul class="ul_menu">
                     <li class="li_menu"><a class="menu_item" href="#">Главная</a></li>
-                    <li class="li_menu"><a class="menu_item" href="#">Геленджик</a></li>
+                    <li class="li_menu"><a class="menu_item" href="#">Геленджик</a>
                     <div class="submenu">
                         <div class="container">
-                            <div class="row row_submenu">
+                            <div class="row">
                                 <ul class="ul_submenu">
                                     <li class="li_submenu"><a class="sub_menu_item" href="#">Моя душа - Геленджик</a></li>
                                     <li class="li_submenu"><a class="sub_menu_item" href="#">Достопримечательности</a></li>
@@ -58,11 +58,10 @@
                                     <li class="li_submenu"><a class="sub_menu_item" href="#">Грибы на Кубани</a></li>
                                     <li class="li_submenu"><a class="sub_menu_item" href="#">Фотогалерея "Влюбленные в Геленджик"</a></li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
-
+                    </li>
                     <li class="li_menu"><a class="menu_item" href="#">Самопознание</a></li>
                     <li class="li_menu"><a class="menu_item" href="#">О здоровье</a></li>
                     <li class="li_menu"><a class="menu_item" href="#">О семье</a></li>
