mobile menu start

--- a/index.html
+++ b/index.html
@@ -73,6 +73,42 @@
         </div>
 
     </div>
+    <div class="mobile_menu">
+        <span class="mobile_back">1</span>
+        <span class="mobile_close">2</span>
+        <ul class="ul_mobile_menu">
+            <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Главная</li></a>
+            <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Геленджик</li>
+                <div class="mobile_submenu">
+                    <div class="container">
+                        <div class="row">
+                            <ul class="ul_mobile_submenu">
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Моя душа - Геленджик</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Достопримечательности</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Тайны и загадки</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Жилье в Геленджике</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Отдых на море</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Развлечения</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Экскурсии</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">На ПМЖ в Геленджике</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Пляжи Геленджика</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Большой Геленджик</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Новости Кубани</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Грибы на Кубани</li></a>
+                               <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Фотогалерея "Влюбленные в Геленджик"</li></a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Самопознание</li></a>
+            <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">О здоровье</li></a>
+            <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">О семье</li></a>
+            <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Моя кулинария</li></a>
+            <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Обо мне</li></a>
+            <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Контакты</li></a>
+        </ul>
+    </div>
 </div>
 
 <div class="valera">sdsd</div>
