Blur working site name

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <div class="header">
+    <div class="header_blur">
+
+    </div>
     <div class="header_block">
         <div class="container header_container">
             <div class="row header_row justify-content-sm-center">
