--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <div class="header_blur">
 
     </div>
-    <div class="menu_blur">
-
-    </div>
+    <div class="menu_blur"></div>
     <div class="header_block">
         <div class="container header_container">
             <div class="row header_row justify-content-sm-center">
