Кривое субменю на телефоне

--- a/index.html
+++ b/index.html
@@ -77,15 +77,20 @@
         </div>
 
     </div>
-    <div class="mobile_menu">
-        <span class="mobile_back">1</span>
-        <span class="mobile_close">2</span>
+    <div class="mobile_menu e_close_menu">
+        <div class="mobile_back_close_button">
+            <span class="mobile_back">
+                <img src="img/left-arrow.png" alt="">
+            </span>
+            <span class="mobile_menu_select"></span>
+            <span class="mobile_close">
+                <img src="img/cross-out.png" alt="">
+            </span>
+        </div>
         <ul class="ul_mobile_menu">
             <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Главная</li></a>
             <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Геленджик</li>
                 <div class="mobile_submenu">
-                    <div class="container">
-                        <div class="row">
                             <ul class="ul_mobile_submenu">
                                <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Моя душа - Геленджик</li></a>
                                <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Достопримечательности</li></a>
@@ -101,8 +106,6 @@
                                <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Грибы на Кубани</li></a>
                                <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Фотогалерея "Влюбленные в Геленджик"</li></a>
                             </ul>
-                        </div>
-                    </div>
                 </div>
             </a>
             <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Самопознание</li></a>
