--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             </span>
         </div>
         <ul class="ul_mobile_menu">
-            <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Главная</li></a>
-            <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Геленджик</li>
-                <div class="mobile_submenu">
+            <li class="li_mobile_menu"><a class="menu_mobile_item" href="#">Главная</a></li>
+            <li class="li_mobile_menu"><a class="menu_mobile_item" href="#">Геленджик</a>
+                <div class="mobile_submenu e_close_menu">
                             <ul class="ul_mobile_submenu">
                                <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Моя душа - Геленджик</li></a>
                                <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Достопримечательности</li></a>
@@ -107,7 +107,7 @@
                                <a class="sub_mobile_menu_item" href="#"><li class="li_mobile_submenu">Фотогалерея "Влюбленные в Геленджик"</li></a>
                             </ul>
                 </div>
-            </a>
+            </li>
             <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">Самопознание</li></a>
             <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">О здоровье</li></a>
             <a class="menu_mobile_item" href="#"><li class="li_mobile_menu">О семье</li></a>
